--- a/index.html
+++ b/index.html
@@ -266,6 +266,15 @@
              @apply hover:bg-red-600 text-red-400 hover:text-white; /* Style delete differently */
         }
 
+        /* --- Mobile Menu --- */
+        #mobile-menu {
+             @apply absolute top-full left-0 right-0 bg-gray-800/95 backdrop-blur-sm p-4 space-y-2 border-t border-gray-700/50 md:hidden z-30;
+             /* Start hidden, JS will toggle */
+        }
+        .mobile-menu-link {
+             @apply block text-gray-300 hover:text-white transition duration-200 py-1;
+        }
+
 
     </style>
 </head>
@@ -310,7 +319,7 @@
     </div>
 
 
-    <header class="py-4 sticky top-0 z-20 bg-gray-900/80 backdrop-blur-md border-b border-gray-700/50">
+    <header class="py-4 sticky top-0 z-40 bg-gray-900/80 backdrop-blur-md border-b border-gray-700/50">
         <div class="container mx-auto px-6 flex justify-between items-center">
             <div class="flex items-center space-x-2">
                 <img src="images/icon.png" alt="Shillette Icon" class="w-8 h-8" onerror="this.style.display='none'; this.nextElementSibling.classList.remove('hidden');">
@@ -335,11 +344,17 @@
                 </div>
             </div>
             <div class="md:hidden">
-                <button class="text-gray-300 hover:text-white">
+                <button id="mobile-menu-button" class="text-gray-300 hover:text-white focus:outline-none">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
                 </button>
             </div>
         </div>
+        <div id="mobile-menu" class="hidden">
+            <a href="#home" class="mobile-menu-link">Home</a>
+            <a href="#products" class="mobile-menu-link">Products</a>
+            <a href="#tickets" class="mobile-menu-link">Tickets</a>
+            <a href="https://discord.gg/shillette" target="_blank" rel="noopener noreferrer" class="mobile-menu-link">Discord</a>
+            </div>
     </header>
 
     <main id="main-content" class="flex-grow page-section"> <section class="relative text-center py-24 md:py-32 lg:py-40 overflow-hidden">
@@ -591,6 +606,8 @@
         const contextCloseTicketButton = document.getElementById('context-close-ticket');
         const contextReopenTicketButton = document.getElementById('context-reopen-ticket');
         const contextDeleteTicketButton = document.getElementById('context-delete-ticket'); // Added delete ticket button
+        const mobileMenuButton = document.getElementById('mobile-menu-button'); // Added mobile menu button
+        const mobileMenu = document.getElementById('mobile-menu'); // Added mobile menu div
 
 
         // --- Configuration ---
@@ -1458,6 +1475,20 @@
          }
          if (contextDeleteTicketButton) {
              contextDeleteTicketButton.addEventListener('click', deleteTicket);
+         }
+
+         // Mobile Menu Toggle
+         if (mobileMenuButton && mobileMenu) {
+             mobileMenuButton.addEventListener('click', () => {
+                 mobileMenu.classList.toggle('hidden');
+             });
+             // Add listeners to mobile menu links to close menu on click
+             mobileMenu.querySelectorAll('a').forEach(link => {
+                 link.addEventListener('click', () => {
+                     mobileMenu.classList.add('hidden');
+                     // Let the default link behavior (hash change) handle navigation
+                 });
+             });
          }
 
 
